--- a/app/src/main/res/layout/activity_math_method.xml
+++ b/app/src/main/res/layout/activity_math_method.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Välj räknesätt"
+        android:text="@string/chooseMathMethodText"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
